--- a/templates/forum/topic_pagination.part.html
+++ b/templates/forum/topic_pagination.part.html
@@ -1,40 +1,34 @@
-<div class="row">
-    <div class="large-12 columns">
-        <div class="pagination-centered">
-            <ul class="pagination">
-                <li class="arrow {% ifequal nb 1 %}unavaible{% endifequal %}">
-                    <a href="{% ifnotequal nb 1 %}{{ topic.get_absolute_url }}?page={{ nb|add:"-1" }}{% else %}javascript:;{% endifnotequal %}">
-                        «
-                    </a>
-                </li>
-            
-                {% for page in pages %}
-                    {% if page %}
-                        <li class="{% ifequal page nb %}current{% endifequal %}">
-                            <a href="{% ifnotequal page nb %}{{ topic.get_absolute_url }}?page={{ page }}{% else %}javascript:;{% endifnotequal %}">
-                                {{ page }}
-                            </a>
-                        </li>
-                    {% else %}
-                        <li>
-                            <a href="#" data-dropdown="pagin-{{position}}">…</a>
-                            <ul id="pagin-{{position}}" class="f-dropdown content" data-dropdown-content>
-							  <li>
-							  <form method="get">
-							  	<input type="text" placeholder="Page" name="page" class="small" />
-							  </form>
-							  </li>
-							</ul>
-                        </li>
-                    {% endif %}
-                {% endfor %}
-                
-                <li class="arrow {% ifequal nb pages|last %}unavaible{% endifequal %}">
-                    <a href="{% ifnotequal nb pages|last %}{{ topic.get_absolute_url }}?page={{ nb|add:"1" }}{% else %}javascript:;{% endifnotequal %}">
-                        »
-                    </a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</div>
+<ul class="pagination">
+    <li class="arrow {% ifequal nb 1 %}unavaible{% endifequal %}">
+        <a href="{% ifnotequal nb 1 %}{{ topic.get_absolute_url }}?page={{ nb|add:"-1" }}{% else %}javascript:;{% endifnotequal %}">
+            «
+        </a>
+    </li>
+
+    {% for page in pages %}
+        {% if page %}
+            <li >
+                <a class="{% ifequal page nb %}current{% endifequal %}" href="{% ifnotequal page nb %}{{ topic.get_absolute_url }}?page={{ page }}{% else %}javascript:;{% endifnotequal %}">
+                    {{ page }}
+                </a>
+            </li>
+        {% else %}
+            <li>
+                <a href="#" data-dropdown="pagin-{{position}}">…</a>
+                <ul id="pagin-{{position}}" class="f-dropdown content" data-dropdown-content>
+				  <li>
+				  <form method="get">
+				  	<input type="text" placeholder="Page" name="page" class="small" />
+				  </form>
+				  </li>
+				</ul>
+            </li>
+        {% endif %}
+    {% endfor %}
+    
+    <li class="arrow {% ifequal nb pages|last %}unavaible{% endifequal %}">
+        <a href="{% ifnotequal nb pages|last %}{{ topic.get_absolute_url }}?page={{ nb|add:"1" }}{% else %}javascript:;{% endifnotequal %}">
+            »
+        </a>
+    </li>
+</ul>
