--- a/templates/home.html
+++ b/templates/home.html
@@ -2,6 +2,7 @@
 {% load emarkdown %}
 {% load humane_date %}
 {% load interventions %}
+{% load topbar %}
 
 {% block menu_home %}
 class="active"
@@ -19,6 +20,29 @@ class="active"
     <meta name="description" content="Bienvenue sur ZesteDeSavoir, une communauté" />
 {% endblock %}
 
+{% block sidebar %}
+<aside class="sidebar mobile-menu-bloc mobile-menu-hide"
+                       data-title="{% block sidebar_title %}Catégories de tutoriels{% endblock %}"
+                >
+        <h3>Catégories <span class="wide">de tutoriels</span></h3>
+
+        {% with categories='.'|top_categories_tuto %}
+        {% for category in categories %}
+            <h4><a href="#" class="mobile-menu-link">{{ category.title }}</a></h4>
+            <ul>
+                {% for catofsubcat in category.get_subcategories %}
+                    <li>
+                        <a href="{{ catofsubcat.subcategory.get_absolute_url_tutorial }}">
+                            {{ catofsubcat.subcategory }}
+                        </a>
+                    </li>
+                {% endfor %}
+            </ul>
+        {% endfor %}
+        {% endwith %}
+    
+</aside>
+{% endblock %}
 
 
 
@@ -46,7 +70,7 @@ class="active"
                     </a>
                     {% endif %}
                     <p class="resume">
-                        {{ article.subtitle }}
+                        {{ article.description }}
                     </p>
                 </article>
             {% endfor %}
