correct sign with emarkdown inline

--- a/templates/forum/topic.html
+++ b/templates/forum/topic.html
@@ -1,5 +1,6 @@
 {% extends "forum/base.html" %}
 {% load emarkdown %}
+{% load emarkdown_inline %}
 {% load markup %}
 {% load humane_date %}
 {% load profile %}
@@ -82,7 +83,7 @@
 
         <div class="message-bottom">
             {% with profile=post.author|profile %}
-                <p class="signature">{{profile.sign|emarkdown}}</p>
+                <p class="signature">{{profile.sign|emarkdown_inline}}</p>
             {% endwith %}
             {% if user.is_authenticated %}
             <div class="message-karma">
